minor fixes (auto rotate weights for no overlap)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,3 +37,7 @@
     font-family: "OpenSans";
     line-height: 2.5;
 }
+
+#start {
+
+}
